# wallpaper-your-apps

mariko-33_gsw_dll/: CMakeLists.txt  mariko-33_gsw.cpp  mariko-33_gsw.h
mariko-33_hmi_dll/: CMakeLists.txt  mariko-33_hmi.cpp  mariko-33_hmi.h
mariko-33_main/: CMakeLists.txt  cn.mo  en.html  en.mo  en.po  icon.rc  main.cpp  predef.h
mariko-33_sbw_dll/: CMakeLists.txt  mariko-33_sbw.cpp  mariko-33_sbw.h
